# stm32-pulse-timestamper

./: .gitignore  CMakeLists.txt  README.md
Drivers/: CMakeLists.txt
Drivers/CMSIS/Device/: CMakeLists.txt
Drivers/STM32L4xx_HAL_Driver/: CMakeLists.txt
app/: CMakeLists.txt  main.c  readme.txt
app/Inc/: main.h
app/Src/: main.c  stm32l4xx_hal_msp.c
apps/: CMakeLists.txt
apps/pulse_read_irq/: CMakeLists.txt  readme.txt
apps/pulse_read_irq/Inc/: main.h  stm32l4xx_it.h
apps/pulse_read_irq/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
apps/pulse_read_irq_dma/: CMakeLists.txt  readme.txt
apps/pulse_read_irq_dma/Inc/: main.h
apps/pulse_read_irq_dma/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
apps/pulse_read_irq_dma_eth/: ._ioLibrary_Driver  CMakeLists.txt  listen_udp.py  readme.txt  receive_thread.py  record_thread.py  statistics_thread.py
apps/pulse_read_irq_dma_eth/Inc/: main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
apps/pulse_read_irq_dma_eth/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
apps/pulse_read_main/Inc/: stm32l4xx_it.h
apps/pulse_read_main/Src/: stm32l4xx_it.c
hal/: CMakeLists.txt
hal/stm32l4xx_hal/: CMakeLists.txt
hal/system/: CMakeLists.txt  stm32l4xx_hal_conf.h
